--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,14 +3,14 @@
     package="jp.co.generace.map"
     android:versionCode="1"
     android:versionName="1.0" >
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-	<!-- The following two permissions are not required to use
-	     Google Maps Android API v2, but are recommended. -->
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	 <uses-permission android:name="android.permission.INTERNET"/>
+	  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	  <uses-permission
+	    android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	  <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
@@ -20,10 +20,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+	      android:name="com.google.android.maps.v2.API_KEY"
+	      android:value="AIzaSyDbL6iekYpJScSvMpVgQ8aE9KkH52hnBO4"/>
+	
+	    <uses-library
+	      android:name="com.google.android.maps" />
         <activity
             android:name="jp.co.generace.map.FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
