--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,9 +20,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data
-	      android:name="com.google.android.maps.v2.API_KEY"
-	      android:value="AIzaSyDbL6iekYpJScSvMpVgQ8aE9KkH52hnBO4"/>
 	
 	    <uses-library
 	      android:name="com.google.android.maps" />
@@ -38,6 +35,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+	      android:name="com.google.android.maps.v2.API_KEY"
+	      android:value="AIzaSyDbL6iekYpJScSvMpVgQ8aE9KkH52hnBO4"/>
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
